--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>BMW</title>
+        <meta name="viewport" content="width=device-width, user-scalable=no"> <!---щоб не можна було збільшувати сторінку на телефоні--->
         <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
         <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
         <link rel="stylesheet" type="text/css" href="css/style.css">
