--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                         </div>
 
                         <div class="adventes___img">
-                            <img src="images/BMW-5-E60 (2).jpg" alt="">
+                            <img class="adventes_img_width" src="images/BMW-5-E60 (2).jpg" alt="">
                         </div>
                     </div>
-                    <div class="adventes-inner_row">
+                    <div class="adventes-inner_row adventes-inner_row--mobile " >
                         <div class="adventes___img">
-                            <img src="images/salon.png" alt="">
+                            <img class="adventes_img_width" src="images/salon.png" alt="">
                         </div>
 
                         <div class="adventes-desk">
@@ -136,14 +136,16 @@
                     <div class="desing-row__item">
                         <div class="desing-row__item_num">01</div>
                         <div class="desing-row__item__text">
-                            Новый родстер был разработан бывшим дизайнером Mazda Францем фон Хольцхаузеном. 
-                            Имеет съёмную стеклянную крышу и кузов с двумя передними сиденьями плюс два небольших сиденья сзади.</div>
+                            Дизайн разработали Крис Бэнгл (Chris Bangle) и Эдриан Ван Хоойдонк (Adrian van Hooydonk). 
+                            Экстерьер 5 серии получил отточенные, выразительные линии и динамичные формы.
+                             Внешне новая модель напоминает предшественницу очень отдаленно: округлый передок, стесанными по бокам капот и узкие фары, заходящие на боковины.</div>
                     </div>
                     <div class="desing-row__item">
                         <div class="desing-row__item_num">02</div>
                         <div class="desing-row__item__text">
-                            Родстер имеет три электродвигателя, один спереди и два сзади, 
-                            Они обеспечивают полный привод, а также систему адресного распределения крутящего момента для лучшего прохождения поворотов.</div>
+                            Открывает моторную линейку 163-сильный бензиновый мотор рабочим объемом 2 литра. 
+                            Основная масса двигателей была заимствована у Е39. На 2003 год в гамме «пятерки» также значились: 520i (2.2 - 170 л.с.), 525i (2.5 - 192 л.с.), 530i (3.0 - 231 л.с.), 
+                            530d (3.0 - 218 л.с.) и на вершине был 545i (4.4 333 л.с.). Двигатели агрегатировались с 6-ступенчатой ​​механической или автоматической коробкой передач. </div>
                     </div>
                 </div>
             </div>
@@ -156,7 +158,7 @@
                 </div>
                 <div class="footer_copy">
                     <ul>
-                        <li>BMW © 2020</li>
+                        <li>BMW © 2021</li>
                         <li><a href="#">Privacy & Legal</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">Careers</a></li>
